
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/conference_background">

    <LinearLayout
        android:id="@+id/tutorial_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="48dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tutorial"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:textColor="@color/conference_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/tutorial_summary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/conference_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/tutorial_demo"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/conference_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


             <edu.vassar.neuroscientists.view.LinearWord
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <edu.vassar.neuroscientists.view.EditLetter
                android:layout_width="@dimen/box_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/col_margin"
                android:layout_marginEnd="@dimen/col_margin"
                android:layout_weight="@integer/box_weight"
                android:background="@drawable/wordle_white"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:textSize="@dimen/character_size"
                android:text="P"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/wordle_green"/>

            <edu.vassar.neuroscientists.view.EditLetter
                android:layout_width="@dimen/box_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/col_margin"
                android:layout_marginEnd="@dimen/col_margin"
                android:layout_weight="@integer/box_weight"
                android:background="@drawable/wordle_white"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:textSize="@dimen/character_size"
                android:text="E"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>

            <edu.vassar.neuroscientists.view.EditLetter
                android:layout_width="@dimen/box_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/col_margin"
                android:layout_marginEnd="@dimen/col_margin"
                android:layout_weight="@integer/box_weight"
                android:background="@drawable/wordle_white"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:textSize="@dimen/character_size"
                android:text="A"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>

            <edu.vassar.neuroscientists.view.EditLetter
                android:layout_width="@dimen/box_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/col_margin"
                android:layout_marginEnd="@dimen/col_margin"
                android:layout_weight="@integer/box_weight"
                android:background="@drawable/wordle_white"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:textSize="@dimen/character_size"
                android:text="C"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>

            <edu.vassar.neuroscientists.view.EditLetter
                android:layout_width="@dimen/box_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/col_margin"
                android:layout_marginEnd="@dimen/col_margin"
                android:layout_weight="@integer/box_weight"
                android:background="@drawable/wordle_white"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:textSize="@dimen/character_size"
                android:text="H"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/black"/>


            </edu.vassar.neuroscientists.view.LinearWord>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/peach_ex"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/conference_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <edu.vassar.neuroscientists.view.LinearWord
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="S"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="L"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/wordle_yellow"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="O"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="P"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="E"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>


            </edu.vassar.neuroscientists.view.LinearWord>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slope_ex"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/conference_white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <edu.vassar.neuroscientists.view.LinearWord
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/row_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="J"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="U"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="I"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="C"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/wordle_gray"/>

                <edu.vassar.neuroscientists.view.EditLetter
                    android:layout_width="@dimen/box_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/col_margin"
                    android:layout_marginEnd="@dimen/col_margin"
                    android:layout_weight="@integer/box_weight"
                    android:background="@drawable/wordle_white"
                    android:gravity="center"
                    android:importantForAccessibility="no"
                    android:textSize="@dimen/character_size"
                    android:text="E"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/black"/>


            </edu.vassar.neuroscientists.view.LinearWord>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/juice_ex"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/conference_white"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tutorial_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@android:string/ok"
            android:textColor="@color/white"
            app:shapeAppearance="@style/Theme.MyApplication" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:background="@drawable/tutorial_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="-28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tutorial_Layout"/>


</androidx.constraintlayout.widget.ConstraintLayout>